@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.337 2002/10/15 15:37:22 cjep Exp $
+# $NetBSD: Makefile,v 1.338 2002/10/18 22:08:41 abs Exp $
 #
 
 COMMENT=	Networking tools
@@ -33,6 +33,7 @@ SUBDIR+=	chrony
 SUBDIR+=	cia
 SUBDIR+=	cidr
 SUBDIR+=	citrix_ica
+SUBDIR+=	cmu-dhcpd
 SUBDIR+=	coda5_client
 SUBDIR+=	coda5_server
 SUBDIR+=	coda_client
